# struxis

./: .gitignore  Cargo.toml  README.md
backtest/: Cargo.toml
broker/: Cargo.toml
broker/src/: adapters.rs  error.rs  lib.rs  lifecycle.rs  protocol.rs  pump.rs
broker/src/adapters/: futures.rs  mock.rs
broker/src/adapters/crypto/: binance.rs
broker/src/adapters/futures/: ctp.rs
broker/tests/: i888_dataset_flow_tests.rs
config/: Cargo.toml  sd.default.yaml  sd.profile.yaml
dataset/: I8888.XDCE_15m.csv  I8888.XDCE_1d.csv  I8888.XDCE_M15_structures.json
docs/: CONTRIBUTING-struxis.md  kline-structures-data.smoke.json  market-readiness-v1.md  naming.md  project-understanding.md  replay-kline-workflow.md  rust-coding-standard.md  rust-migration.md  struxis-core-semantics.md  struxis-core-task-roadmap.md  trading-system-thinking.md  workspace-layout.md  workspace-projects.md
struxis/: Cargo.toml
struxis/src/: bar.rs  cbar_manager.rs  constant.rs  engine.rs  events.rs  id_generator.rs  indicator.rs  keyzone.rs  lib.rs  logging.rs  mtc.rs  receiver.rs  sbar_manager.rs  sd.rs  swing.rs  symbol.rs  tick.rs  timeframe_manager.rs  trend.rs  utils.rs
struxis/src/indicator/: atr.rs  core.rs  ema.rs  manager.rs
struxis/src/keyzone/: builder.rs  factory.rs
struxis/src/keyzone/builder/: channel.rs  swing.rs  trend.rs
struxis/tests/: cbar_inclusive_check.rs  cbar_pipeline_tests.rs  e2e_factor_pipeline_tests.rs  fractal_pipeline_tests.rs  intermediate_structures_tests.rs  keyzone_pipeline_tests.rs  keyzone_tests.rs  mtc_tests.rs  receiver_tests.rs  sd_tests.rs  structure_semantics_tests.rs  swing_pipeline_tests.rs  swing_tests.rs  trend_pipeline_tests.rs  trend_tests.rs
(+33 files in other folders)
