[workspace]
resolver = "2"
members = [
	"market",
	"struxis",
	"strategy",
	"risk",
	"portfolio",
	"order",
	"broker",
	"backtest",
	"replay",
	"runtime",
	"monitor",
	"config",
	"apps/live",
	"apps/sim",
	"apps/research",
	"replay/web",
]


[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
polars = { version = "0.38", default-features = false, features = ["lazy", "dtype-datetime", "parquet", "fmt"] }
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros"] }
crossbeam = "0.8"
tokio-tungstenite = "0.23"
futures-util = "0.3"
